[MODINVOICE-302] - Minor improvement: retrieving toList() in some places and improved error messages